// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.api.v2alpha.event_templates.testing;

import "google/protobuf/duration.proto";
import "wfa/measurement/api/v2alpha/event_annotations.proto";

option java_package = "org.wfanet.measurement.api.v2alpha.event_templates.testing";
option java_multiple_files = true;

message Video {
  option (.wfa.measurement.api.v2alpha.event_template) = {
    name: "video_ad"
    display_name: "Video Ad"
    description: "A simple template for events related to a video ad."
  };

  google.protobuf.Duration length = 1
      [(.wfa.measurement.api.v2alpha.template_field) = {
        display_name: "Video Length"
      }];

  double viewed_fraction = 2 [(.wfa.measurement.api.v2alpha.template_field) = {
    display_name: "Viewed Fraction"
    description: "Fraction of the video that was viewed in the range [0, 1]"
  }];
}
